--- a/Piscine_MERN_Jour_02/ex_05/views/index.ejs
+++ b/Piscine_MERN_Jour_02/ex_05/views/index.ejs
@@ -27,7 +27,7 @@ crossorigin="anonymous">
                   
         <div class="col-md-6 main"> 
                       
-            <form action="/sign_up" method="post"> 
+            <form  method="post" action="/sign_up"> 
                       
             <h1> Signup form </h1> 
                               
