--- a/Piscine_MERN_Jour_03/ex_02/views/index.ejs
+++ b/Piscine_MERN_Jour_03/ex_02/views/index.ejs
@@ -40,10 +40,10 @@ crossorigin="anonymous">
             <input class="box" type="password" name="password" id="name" 
             placeholder="Enter password"  required /><br> 
 
-
-            <!-- <input class="box" type="password" name="passwordConfirm" id="name" 
-            placeholder="Confirm password"  required /><br> -->
+            <input class="box" type="password" name="passwordConfirm" id="name" 
+            placeholder="Confirm password"  required /><br>
                               
+            <h3> <%= data  %> </h3>
                         <br> 
 
             <input class="btn btn-success"type="submit" id="submitDetails"  
