--- a/Piscine_MERN_Jour_04/ex_02/views/login.ejs
+++ b/Piscine_MERN_Jour_04/ex_02/views/login.ejs
@@ -37,6 +37,9 @@
             placeholder="Enter password" required /><br> 
             <br> 
 
+            <h3> <%= data  %> </h3>
+                        <br> 
+
             <input class="btn btn-success"type="submit" id="submitDetails"  
             name="students" value="Submit" /><br> 
                       
